fix do z-index do scroller da pagina cursos

--- a/estilos/cursos/Desktop.css
+++ b/estilos/cursos/Desktop.css
@@ -26,6 +26,7 @@
         opacity: 0;
         transition: 0.5s;
         user-select: none;
+        z-index: 2;
     }
 
     #scroller.visible {
